# CodersCupPython

./: .flake8  .gitignore  pyproject.toml  socketio_server.py
code_cup/: apps.py  code_websocket.py  models.py  routing.py  tasks.py  urls.py  views.py  views_utils.py
code_cup/management/commands/: import_tasks.py
code_cup/templates/: main_page.html
code_cup/templates/content/: collaboration_editor.html  empty_container_file.html  single_editor.html
code_cup/templates/menu/: menu.html
code_cup/templates/modal/: modal_new_tab.html  modal_waiting_user.html  modal_welcome_user.html
config/: asgi.py  settings.py  urls.py
data/: new_task.json  tasks.json
static/: code_editor.js  web_socket_code.js
static/css/: auth.css  main.css  style_code_page.css
static/js/: code_editor.js  task_search.js
user/: models.py  urls.py  views.py
user/templates/: auth.html
